--- a/index.html
+++ b/index.html
@@ -1,60 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Pig Dice</title>
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <script src="js/jquery-3.1.0.js"></script>
-  <script src="js/scripts.js"></script>
-</head>
-<body>
-  <div class="container">
-    <h1>Play Pig Dice!!</h1>
+  <head>
+    <meta charset="utf-8">
+    <title>Pig Dice</title>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <script src="js/jquery-3.1.0.js"></script>
+    <script src="js/scripts.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Play Pig Dice!!</h1>
 
-    <form id="pigForm" class="form-group" action="index.html" method="post">
-      <div class="player-group">
-        <input id="playerName1" type="text">
-        <br>
-        <label class="player-group">Player1</label>
-      </div>
-      <div class="playersName">
-        <input id="playerName2" type="text">
-        <br>
-        <label class="player-group">Player2</label>
-      </div>
-        <button class="player-group btn-success" name="button">Start</button>
-    </form>
 
-    <br>
-    <div class="gameDisplay">
-      <div class="col-md-5" id="gameDisplayPlayer1">
-        <h2><span id="playerName1"></span>Score: <span class="gameStatusDisplay  player1Score">0</span></h2>
-        <div id="player1Button">
-          <h2>Player <span class="playerStatus" class="gameStatusDisplay"></span>'s Turn</h2>
+      <form id="pigForm" class="form-group" action="index.html" method="post">
+        <div class="player-group">
+          <input id="playerName1" type="text">
+          <br>
+          <label class="player-group">Player1</label>
+        </div>
+        <div class="playersName">
+          <input id="playerName2" type="text">
+          <br>
+          <label class="player-group">Player2</label>
+        </div>
+        <button class="player-group btn-success" name="button" id="btn">Start</button>
+      </form>
+    </div>
+
+      <br>
+      <div class="gameDisplay">
+        <div class="col-md-5" id="gameDisplayPlayer1">
+          <h2><span id="playerName1"></span>Score: <span class="gameStatusDisplay  player1Score">0</span></h1>
+          <div id="player1Button">
+          <h2>Score for this Turn: <span id="turnScore" class="gameStatusDisplay turnScore"></span></h2>
+          <h2>Roll Result: <span id="rollResult" class="gameStatusDisplay rollResult"></span></h2>
+          <div class="btn">
+          <button type="button" class="btn btn-warning btn-lg rollPig" id="btn">Roll</button>
+          <button type="button" class="btn btn-primary btn-lg holdPig" id="btn">Hold</button>
+        </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-5 col-md-offset-2" id="gameDisplayPlayer2">
+          <h2><span id="playerName2"></span>Score: <span class="gameStatusDisplay player2Score">0</span></h2>
+          <div id="player2Button">
+
           <h2>Score for this Turn: <span id="turnScore" class="gameStatusDisplay turnScore"></span></h2>
           <h2>Roll Result: <span id="rollResult" class="gameStatusDisplay rollResult"></span></h2>
 
-          <button type="button" class="btn btn-warning btn-lg rollPig">Roll</button>
-          <button type="button" class="btn btn-primary btn-lg holdPig">Hold</button>
+          <div class="btn">
+          <button type="button" class="btn btn-warning btn-lg rollPig" id="btn">Roll</button>
+          <button type="button" class="btn btn-primary btn-lg holdPig" id="btn">Hold</button>
         </div>
+        </div>
+
       </div>
 
 
-      <div class="col-md-5 col-md-offset-2" id="gameDisplayPlayer2">
-        <h2><span id="playerName2"></span>Score: <span class="gameStatusDisplay player2Score">0</span></h2>
-        <div id="player2Button">
-          <h2>Player <span class="playerStatus"></span>'s Turn</h2>
 
-          <h2>Score for this Turn: <span id="turnScore" class="gameStatusDisplay turnScore"></span></h2>
-          <h2>Roll Result: <span id="rollResult" class="gameStatusDisplay rollResult"></span></h2>
-
-
-          <button type="button" class="btn btn-warning btn-lg rollPig">Roll</button>
-          <button type="button" class="btn btn-primary btn-lg holdPig">Hold</button>
-        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
