--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
       <form id="pigForm" class="form-group" action="index.html" method="post">
         <div class="player-group">
-          <input id="playerName1" type="text">
+          <input id="playerName1" type="text" placeholder="Player1">
           <br>
           <label class="player-group">Player1</label>
         </div>
         <div class="playersName">
-          <input id="playerName2" type="text">
+          <input id="playerName2" type="text" placeholder="player2">
           <br>
           <label class="player-group">Player2</label>
         </div>
@@ -43,24 +43,17 @@
           </div>
         </div>
 
-
         <div class="col-md-5 col-md-offset-2" id="gameDisplayPlayer2">
           <h2><span id="playerName2"></span>Score: <span class="gameStatusDisplay player2Score">0</span></h2>
           <div id="player2Button">
-
           <h2>Score for this Turn: <span id="turnScore" class="gameStatusDisplay turnScore"></span></h2>
           <h2>Roll Result: <span id="rollResult" class="gameStatusDisplay rollResult"></span></h2>
-
           <div class="btn">
           <button type="button" class="btn btn-warning btn-lg rollPig" id="btn">Roll</button>
           <button type="button" class="btn btn-primary btn-lg holdPig" id="btn">Hold</button>
         </div>
         </div>
-
       </div>
-
-
-
       </div>
     </div>
   </body>
