Add changes made

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
       <form id="pigForm" class="form-group" action="index.html" method="post">
-        <div class="player-group">
+        <div class="playerName1">
           <input id="playerName1" type="text" placeholder="Player1">
           <br>
           <label class="player-group">Player1</label>
