--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
       <form id="pigForm" class="form-group" action="index.html" method="post">
         <div class="playerName1">
-          <input id="playerName1" type="text" placeholder="Player1">
+          <input id="playerName1" type="text">
           <br>
           <label class="player-group">Player1</label>
         </div>
         <div class="playersName">
-          <input id="playerName2" type="text" placeholder="player2">
+          <input id="playerName2" type="text">
           <br>
           <label class="player-group">Player2</label>
         </div>
